# irtho

./: README.md  pixi.toml  pyproject.toml
irtho/: __init__.py  align.py  orthofinder.py  orthologs.py  synteny.py  utils.py
notebooks/: irtho.ipynb
