[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irtho"
version = "0.1.0"
description = "A tool for locating orthologous loci for insecticide resistance"
requires-python = ">=3.10, <3.13"
authors = [
  {name = "Sanjay C Nagi", email = "sanjay.c.nagi@gmail.com"}
]
dependencies = [
  "pandas>=2.2.3,<3",
  "plotly>=5.24.1,<6",
  "numpy>=2.0.2,<3",
  "ipykernel>=6.29.5,<7",
  "pip>=24.3.1,<25"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["irtho*"]

[tool.irtho]
# These keys are preserved from pixi.toml for custom internal use.
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

# Optional: If you have tasks or other custom workflows,
# you might add them here. For now, this section is empty
# as a placeholder.
tasks = {}
