[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irtho"
version = "0.1.1"
description = "A tool for locating orthologous loci for insecticide resistance"
requires-python = ">=3.9, <3.13"
authors = [
  {name = "Sanjay C Nagi", email = "sanjay.c.nagi@gmail.com"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "*"
pandas = "*"
ipykernel = "*"
biopython = "*"

[tool.poetry.extras]
dev = ["jupyterlab"]

[tool.setuptools.packages.find]
where = ["."]
include = ["irtho*"]

[tool.irtho]
# These keys are preserved from pixi.toml for custom internal use.
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

# Optional: If you have tasks or other custom workflows,
# you might add them here. For now, this section is empty
# as a placeholder.
tasks = {}
